--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>top.vchar.demo.spring</groupId>
     <artifactId>spring-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>springboot-demo1</module>
+        <module>springboot-demo2</module>
+    </modules>
     <packaging>pom</packaging>
     <name>spring-demo</name>
     <description>spring全家桶学习教程</description>
