--- a/springboot-dev-demo/pom.xml
+++ b/springboot-dev-demo/pom.xml
@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <!--首先依赖spring boot 父级maven 包-->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -10,9 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springboot-demo3</artifactId>
+    <groupId>top.vchar.demo.spring</groupId>
+    <artifactId>springboot-dev-demo</artifactId>
     <packaging>jar</packaging>
-    <description>springboot的controller相关注解说明</description>
+    <description>springboot 热部署</description>
 
     <dependencies>
         <!--spring boot web 包-->
@@ -20,13 +20,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <!--spring boot 配置文件注入包-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
+            <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <!--spring boot 打包工具-->
@@ -36,4 +36,6 @@
             </plugin>
         </plugins>
     </build>
+
+
 </project>
