springboot 自定义启动样式

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>springboot-freemarker-demo</module>
         <module>springboot-dev-demo</module>
         <module>springboot-test-demo</module>
+        <module>springboot-customer-banner-demo</module>
     </modules>
     <packaging>pom</packaging>
     <name>spring-demo</name>
