--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <module>springboot-customer-banner-demo</module>
         <module>springboot-exception-demo</module>
         <module>springboot-war-demo</module>
+        <module>springboot-timer-demo</module>
+        <module>springboot-filter-demo</module>
     </modules>
     <packaging>pom</packaging>
     <name>spring-demo</name>
