--- a/springboot-freemarker-demo/src/main/resources/application.yml
+++ b/springboot-freemarker-demo/src/main/resources/application.yml
@@ -4,3 +4,17 @@ server:
   servlet:
     # 配置部署的路径
     context-path: /
+spring:
+  freemarker:
+    charset: UTF-8
+    # 开启缓存
+    cache: true
+    allow-request-override: false
+    check-template-location: true
+    content-type: text/html
+    expose-request-attributes: true
+    expose-session-attributes: true
+    suffix: .ftl
+    template-loader-path: classpath:/templates/
+
+
