--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>springboot-rocketMQ-demo</module>
         <module>springboot-more-environment</module>
         <module>springboot-webflux-demo</module>
+        <module>springboot-actuator-demo</module>
     </modules>
     <packaging>pom</packaging>
     <name>spring-demo</name>
