--- a/springboot-actuator-demo/pom.xml
+++ b/springboot-actuator-demo/pom.xml
@@ -9,10 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springboot-webflux-demo</artifactId>
-    <packaging>jar</packaging>
-    <description>webFlux响应式编程</description>
-
+    <artifactId>springboot-actuator-demo</artifactId>
+    <description>spring监控</description>
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -27,20 +25,16 @@
     </dependencyManagement>
 
     <dependencies>
-<!--        加入依赖，如果同时存在spring-boot-starter-web，则会优先用spring-boot-starter-web-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-web</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+<!--        监控-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
