--- a/springcloud-config-client/pom.xml
+++ b/springcloud-config-client/pom.xml
@@ -35,6 +35,19 @@
             <artifactId>spring-cloud-config-client</artifactId>
         </dependency>
 
+
+<!--        消息总线-bus-->
+        <!--监控-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <!--消息总线-bus-mq-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
