配置中心nacos的使用

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>order-center</module>
         <module>common-dto</module>
         <module>goods-center</module>
+        <module>nacos-config-demo</module>
     </modules>
 
     <properties>
