分布式事务，目前集成还存在问题

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>common-dto</module>
         <module>goods-center</module>
         <module>nacos-config-demo</module>
+        <module>seata</module>
     </modules>
 
     <properties>
