--- a/seata/src/main/resources/application.yml
+++ b/seata/src/main/resources/application.yml
@@ -1,12 +1,17 @@
 server:
-  port: 8093
+  port: 8100
 spring:
   application:
-    name: goods-server
+    name: mall-server
+  main:
+    allow-bean-definition-overriding: true
   cloud:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
+    alibaba:
+      seata:
+        tx-service-group: ${spring.application.name}
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/demo?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
