--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>top.vchar.demo.spring</groupId>
     <artifactId>spring-cloud-hoxton</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>eureka-server</module>
+    </modules>
     <packaging>pom</packaging>
     <name>spring-cloud-hoxton</name>
     <description>spring cloud Hoxton示例</description>
