--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>eureka-server</module>
         <module>user-server</module>
         <module>gateway-server</module>
+        <module>train-server</module>
     </modules>
     <packaging>pom</packaging>
     <name>spring-cloud-hoxton</name>
@@ -50,6 +51,11 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>8.0.21</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>2.8.1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
