--- a/gateway-server/pom.xml
+++ b/gateway-server/pom.xml
@@ -54,5 +54,10 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
