--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>springboot-start-demo</module>
+        <module>base-demo</module>
     </modules>
     <packaging>pom</packaging>
     <name>SpringBoot2-Demo</name>
