--- a/gateway-server/pom.xml
+++ b/gateway-server/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>caffeine</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
         <!--redis相关-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
