网关添加权限拦截优化

--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -33,8 +33,10 @@ spring:
         cors-configurations:
           '[/**]':
             allowedOrigins: "*"
+            allowedHeaders: "*"
             allowedMethods:
               - GET
+              - OPTIONS
               - POST
               - PUT
               - DELETE
