--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>train-server</module>
         <module>common</module>
         <module>biz-common</module>
+        <module>pay-server-rocketmq</module>
     </modules>
     <packaging>pom</packaging>
     <name>spring-cloud-hoxton</name>
