--- a/rocketmq-client-demo/src/main/resources/application.yml
+++ b/rocketmq-client-demo/src/main/resources/application.yml
@@ -20,3 +20,6 @@ rocketmq:
       topics: order-notify
       number: 1
       type: 1
+    - consumerGroup: transaction-message
+      topics: activity-notify
+      number: 3
