springboot 基于kafka 发送消息

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>biz-common</module>
         <module>pay-server-rocketmq</module>
         <module>rocketmq-client-demo</module>
+        <module>kafka-template</module>
     </modules>
     <packaging>pom</packaging>
     <name>spring-cloud-hoxton</name>
