redis 哨兵模式的实现

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>tendis-template</module>
         <module>redis-template</module>
         <module>redis-template-rw</module>
+        <module>redis-template-sentinel</module>
     </modules>
     <packaging>pom</packaging>
     <name>spring-cloud-hoxton</name>
