redis cluster模式的实现

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>redis-template</module>
         <module>redis-template-rw</module>
         <module>redis-template-sentinel</module>
+        <module>redis-template-cluster</module>
     </modules>
     <packaging>pom</packaging>
     <name>spring-cloud-hoxton</name>
