--- a/redis-template/src/main/resources/application.yml
+++ b/redis-template/src/main/resources/application.yml
@@ -3,11 +3,9 @@ server:
 spring:
   redis:
     # 地址
-    host: 192.168.56.102
+    host: 127.0.0.1
     # 端口号
     port: 6379
-    # 密码
-    password: 123456
     # 超时时间，单位毫秒
     timeout: 3000
     # 数据库编号
@@ -25,3 +23,5 @@ spring:
         max-wait: 1000
       #关闭超时时间；单位毫秒
       shutdown-timeout: 200
+  main:
+    allow-bean-definition-overriding: true
