--- a/nacos-config-demo/pom.xml
+++ b/nacos-config-demo/pom.xml
@@ -16,6 +16,12 @@
     <description>使用nacos做配置中心</description>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
