--- a/dubbo-template-api/pom.xml
+++ b/dubbo-template-api/pom.xml
@@ -9,11 +9,17 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dubbo-template</artifactId>
+    <artifactId>dubbo-template-api</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>dubbo-template-api</name>
+    <description>dubbo示例使用的接口</description>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>top.vchar</groupId>
+            <artifactId>common-dto</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
