--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -13,7 +13,10 @@
 	<packaging>jar</packaging>
 	<name>gateway</name>
 	<description>网关</description>
-
+	<properties>
+		<maven.install.skip>true</maven.install.skip>
+		<maven.deploy.skip>true</maven.deploy.skip>
+	</properties>
 	<dependencies>
 		<!--引入gateway依赖，注意不要引入web-start, 因为其使用的是webflux-->
 		<dependency>
@@ -43,5 +46,21 @@
 		</dependency>
 
 	</dependencies>
-
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>2.3.7.RELEASE</version>
+				<executions>
+					<execution>
+						<id>repackage</id>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
