--- a/nacos-config-demo/pom.xml
+++ b/nacos-config-demo/pom.xml
@@ -14,7 +14,10 @@
     <packaging>jar</packaging>
     <name>nacos-config-demo</name>
     <description>使用nacos做配置中心</description>
-
+    <properties>
+        <maven.install.skip>true</maven.install.skip>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
     <dependencies>
 
         <dependency>
@@ -60,5 +63,21 @@
             <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.3.7.RELEASE</version>
+                <executions>
+                    <execution>
+                        <id>repackage</id>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
