dubbo在spring-cloud中使用示例

--- a/dubbo-template-customer/src/main/resources/application.yml
+++ b/dubbo-template-customer/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
     nacos:
       discovery:
         server-addr: 192.168.56.1:8848
+        namespace: ${spring.profiles.active}
 dubbo:
   protocol:
     name: dubbo
